packages/toolkit/components/date-input/_date-input.scss
/* ==========================================================================
   COMPONENTS/ #DATE-INPUT
   ========================================================================== */

.ofh-date-input {
  display: inline-grid;
  gap: ofh-px-to-rem(8px) ofh-px-to-rem(16px);
  grid-template-columns: repeat(4, auto);
  max-width: 100%;
}

.ofh-date-input__item {
  margin-bottom: 0;
  min-width: 0;
}

.ofh-date-input__item--day {
  grid-column: 1;
}

.ofh-date-input__item--month {
  grid-column: 2;
}

.ofh-date-input__item--year {
  grid-column: 3 / span 2;
}

.ofh-date-input__label {
  @include ofh-font('paragraph-sm');

  display: block;
  font-weight: $ofh-typography-weight-regular;
  margin-bottom: $ofh-size-8;
}

.ofh-date-input__input {
  margin-bottom: 0;
}

